platform/kubernetes/base/redis/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: redis
  namespace: shopsphere-data
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: redis
    app.kubernetes.io/component: cache
  ports:
    - name: redis
      port: 6379
      targetPort: redis
      protocol: TCP
