platform/kubernetes/base/redis/network-policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: redis-ingress
  namespace: shopsphere-data
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/name: redis
      app.kubernetes.io/component: cache
  policyTypes:
    - Ingress
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              shopsphere.io/tier: applications
          podSelector:
            matchLabels:
              app.kubernetes.io/name: catalogue-service
      ports:
        - protocol: TCP
          port: 6379
